@@ -1,0 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+Gaz Sensor DX1CG-Z
+http://products.z-wavealliance.org/products/2070
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="2">
+            <Group index="1" max_associations="1" label="LifeLine"/>
+            <Group index="2" max_associations="5" label="Notification"/>
+        </Associations>
+    </CommandClass>
+</Product>
+
