@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+Door Sensor DX1DS-Z
+http://products.z-wavealliance.org/products/1797
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="5">
+            <Group index="1" max_associations="5" label="LifeLine"/>
+            <Group index="2" max_associations="5" label="Binary Sensor"/>
+            <Group index="3" max_associations="5" label="Binary Sensor tamper"/>
+            <Group index="4" max_associations="5" label="Notification"/>
+            <Group index="5" max_associations="5" label="Notification tamper"/>
+        </Associations>
+    </CommandClass>
+</Product>
+
