@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+Smart Smoke Sensor DX1SA-Z
+http://products.z-wavealliance.org/products/1936
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="3">
+            <Group index="1" max_associations="1" label="LifeLine"/>
+            <Group index="2" max_associations="5" label="Binary Sensor"/>
+            <Group index="3" max_associations="5" label="Notification"/>
+        </Associations>
+    </CommandClass>
+</Product>
+
