@@ -310,7 +310,15 @@
 		<Product type="4c42" id="3135" name="Smart LED Light Bulb ZB22UK" config="domitech/zb22uk.xml"/>
 	</Manufacturer>
 	<Manufacturer id="0260" name="Domux">
-		<Product type="8006" id="1000" name="Wall Plug DX2SK-Z" config="domux/dx2skz.xml"/>
+		<Product type="0168" id="0168" name="Door Sensor DX1DS-Z" config="domux/dx1dsz.xml"/>
+		<Product type="8001" id="1000" name="Motion Sensor DX1MS-Z" config="domux/dx1msz.xml"/>
+		<Product type="8002" id="1000" name="Smart Smoke Sensor DX1SA-Z" config="domux/dx1saz.xml"/>
+		<Product type="8003" id="1000" name="Gaz Sensor DX1CG-Z" config="domux/dx1cgz.xml"/>
+		<Product type="8004" id="1000" name="Flood Sensor DX1WL-Z" config="domux/dx1wlz.xml"/>
+		<Product type="8005" id="1000" name="CO Sensor DX1CA-Z" config="domux/dx1caz.xml"/>
+		<Product type="8006" id="1000" name="Smart Metering Plug DX2SK-Z" config="domux/dx2skz.xml"/>
+		<Product type="8007" id="1000" name="Temperature Humidity Sensor DX1HT-Z" config="domux/dx1htz.xml"/>
+		<Product type="8008" id="1000" name="Smart Plug HS2SK-Z" config="domux/dx2skz.xml"/>
 	</Manufacturer>
 	<Manufacturer id="0184" name="Dragon Tech">
 		<Product type="4447" id="3034" name="In Wall Dimmer" config="dragontech/wd-100.xml" />
